--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,7 +454,7 @@ button {
 }
 
 .clear-message {
-  background-color: #d9e021;
+  background-color: #5d5d5d;
   padding: 30px 30px 60px;
   position: relative;
 }
