--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,8 +337,8 @@ button {
   display: block;
   text-decoration: none;
   cursor: pointer;
-  background-color: #006837;
-  color: #fff;
+  background-color: #3c3c3c;
+  color: #7bff00;
   font-size: 24px;
   line-height: 1.54167;
   text-align: center;
@@ -357,7 +357,7 @@ button {
   position: absolute;
   top: calc(50% - 12px);
   right: 15px;
-  fill: #fff;
+  fill: #7bff00;
   width: 12px;
   height: 24px;
 }
@@ -463,7 +463,7 @@ button {
   position: relative;
   display: block;
   text-align: center;
-  color: #006837;
+  color: #7bff00;
   font-size: 30px;
   padding-bottom: 10px;
   margin-bottom: 35px;
