--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,8 +337,8 @@ button {
   display: block;
   text-decoration: none;
   cursor: pointer;
-  background-color: #3c3c3c;
-  color: #7bff00;
+  background-color: #7bff00;
+  color: #000;
   font-size: 24px;
   line-height: 1.54167;
   text-align: center;
