--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,8 +79,8 @@ button {
   display: block;
   border: none;
   margin: 0 auto;
-  background-color: #006837;
-  color: #fff;
+  background-color: #7bff00;
+  color: #000000;
   width: 287px;
   height: 55px;
 }
